--- a/Peliluokkia/Peliluokkia.csproj
+++ b/Peliluokkia/Peliluokkia.csproj
@@ -46,5 +46,8 @@
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="esineet.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
