--- a/Peliluokkia/Peliluokkia.csproj
+++ b/Peliluokkia/Peliluokkia.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hissikaytava.cs" />
+    <Compile Include="Inventaario.cs" />
     <Compile Include="PorraskaytavaAlaovi.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Hawking.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ruokailutila.cs" />
     <Compile Include="Sohvanurkkaus.cs" />
+    <Compile Include="Torvalds.cs" />
     <Compile Include="WC.cs" />
   </ItemGroup>
   <ItemGroup>
