--- a/Peliluokkia/Peliluokkia.csproj
+++ b/Peliluokkia/Peliluokkia.csproj
@@ -45,9 +45,13 @@
     <Compile Include="Hawking.cs" />
     <Compile Include="Heikki.cs" />
     <Compile Include="Hejlsberg.cs" />
+    <Compile Include="Hopper.cs" />
+    <Compile Include="ILamppu.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Jobs.cs" />
     <Compile Include="Kaytava.cs" />
     <Compile Include="Keittio.cs" />
+    <Compile Include="Love.cs" />
     <Compile Include="Porraskaytava.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
