--- a/Peliluokkia/Peliluokkia.csproj
+++ b/Peliluokkia/Peliluokkia.csproj
@@ -55,13 +55,14 @@
     <Compile Include="Jobs.cs" />
     <Compile Include="Kaytava.cs" />
     <Compile Include="Keittokomero.cs" />
-	<Compile Include="Keittio.cs" />
-	<Compile Include="Love.cs" />
+    <Compile Include="Keittio.cs" />
+    <Compile Include="Love.cs" />
     <Compile Include="Porraskaytava.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ruokailutila.cs" />
     <Compile Include="Sohvanurkkaus.cs" />
     <Compile Include="Torvalds.cs" />
+    <Compile Include="Varasto.cs" />
     <Compile Include="WC.cs" />
   </ItemGroup>
   <ItemGroup>
