Winner animaatio lisätty

--- a/Peliluokkia/Peliluokkia.csproj
+++ b/Peliluokkia/Peliluokkia.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Varasto-ovi.cs" />
     <Compile Include="Varasto.cs" />
     <Compile Include="WC.cs" />
+    <Compile Include="Winner.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="esineet.txt" />
